<resources>
    <string name="app_name">傻孩子</string>
    <string name="applicationId">com.sillykid.app</string>
    <string name="loggingLoad">登录中&#8230;</string>
    <string name="sendingLoad">发送中&#8230;</string>
    <string name="dataLoad">数据加载中&#8230;</string>
    <string name="submissionLoad">提交中&#8230;</string>
    <string name="submitSuccess">提交成功！</string>
    <string name="crossLoad">上传中&#8230;</string>
    <string name="download">下载中&#8230;</string>
    <string name="shareJumpLoad">分享跳转中&#8230;</string>
    <string name="saveLoad">保存中&#8230;</string>
    <string name="paymentLoad">支付中&#8230;</string>
    <string name="cancelLoad">取消中&#8230;</string>
    <string name="deleteLoad">删除中&#8230;</string>
    <string name="addLoad">加入中&#8230;</string>
    <string name="attentionLoad">关注中&#8230;</string>
    <string name="cancelCttentionLoad">取消关注中&#8230;</string>
    <string name="reportLoad">举报中&#8230;</string>
    <string name="customerServiceLoad">连接客服中&#8230;</string>
    <string name="videoPathError">视频路径错误</string>
    <string name="imagePathError">图片路径错误</string>
    <string name="noData">没有数据</string>
    <string name="failedUploadPicture">上传失败，请重试</string>
    <string name="failedUploadVideo">上传失败，请重试</string>
    <string name="login">登录</string>
    <string name="number0">0123456789</string>
    <string name="alphanumeric">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789</string>
    <string name="alphanumeric1">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz_0123456789</string>
    <string name="alphanumeric2">ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="accountNumber">帐号</string>
    <string name="accountErroe">帐号错误</string>
    <string name="hintAccountText">请输入手机号码</string>
    <string name="inputPhone">请输入正确的帐号</string>
    <string name="password">密码</string>
    <string name="passwordErroe">密码错误</string>
    <string name="hintPasswordText">请输入数字、字母或字符</string>
    <string name="hintPasswordText5">请输入密码</string>
    <string name="hintPasswordText3">请输入确认密码</string>
    <string name="hintPasswordText4">请再次输入密码</string>
    <string name="hintPasswordText2">账号或密码错误</string>
    <string name="hintPasswordText1">密码为6～20位内的数字、字母或字符组合,请正确填写</string>
    <string name="forgotPassword">忘记密码?</string>
    <string name="bindingAccount">绑定账号</string>
    <string name="bindingPhone">绑定手机号</string>
    <string name="bindingEmail">绑定邮箱号</string>
    <string name="binding">绑定</string>
    <string name="register">注册</string>
    <string name="noAccount">没有账号？</string>
    <string name="register1">立即注册</string>
    <string name="errorCode">请填写验证码</string>
    <string name="phone">手机号/邮箱</string>
    <string name="thirdpartylogin">第三方账号快捷登录</string>
    <string name="thirdqq">QQ</string>
    <string name="thirdweixin">微信</string>
    <string name="authorizationLoad">授权中&#8230;</string>
    <string name="authoriseErr">授权失败，请重试</string>
    <string name="authoriseErr1">您取消了授权</string>
    <string name="authoriseErr2">您还没有安装应用,请下载应用</string>
    <string name="authoriseErr3">没有安装应用</string>
    <string name="loginErr">登录失败，请重新登录</string>
    <string name="loginErr1">获取用户信息失败，请重新登录</string>
    <string name="failedCloudInformation">获取融云信息失败</string>
    <string name="failedCloudInformation1">获取融云信息失败,请用账号密码登录</string>
    <string name="cityDoWantGoTo">您想要去哪座城市</string>
    <string name="selectCountryCode">选择国家区号</string>
    <string name="registerPhone">手机号注册</string>
    <string name="hintPhoneText">请输入手机号</string>
    <string name="hintPhoneText2">国际号码前无需加0</string>
    <string name="hintPhoneText1">请输入正确的手机号</string>
    <string name="registerMailBox">邮箱号注册</string>
    <string name="email">邮箱号</string>
    <string name="hintInvitationCode">请输入邀请码</string>
    <string name="hintEmailText">请输入邮箱号</string>
    <string name="hintEmailText1">请输入正确的邮箱号</string>
    <string name="hintPassword1Text">请输入您的密码</string>
    <string name="hintPassword2Text">请再次输入您的密码</string>
    <string name="resetpwd">重置密码成功，请登录！</string>
    <string name="confirmPassword">确认密码</string>
    <string name="referralcode">推荐码</string>
    <string name="referralcode1">请输入推荐码（可选）</string>
    <string name="pleasePasswordAgain">请再输入一遍密码</string>
    <string name="password3">请输入6～20位密码</string>
    <string name="testget">已发送</string>
    <string name="passwordMismatch">两次密码输入不一致</string>
    <string name="retrievePassword">找回密码</string>
    <string name="verificationCode">验证码</string>
    <string name="testGetCode">获取验证码</string>
    <string name="clickFinish">点击完成代表您同意</string>
    <string name="myagreement">点击注册即表示您同意</string>
    <string name="agreement">《傻孩子注册协议》</string>
    <string name="agreement1">傻孩子注册协议</string>
    <string name="determine">确定</string>
    <string name="forgotPassword1">忘记密码</string>
    <string name="retrievePhonePassword">手机号找回</string>
    <string name="retrieveEmailPassword">邮箱号找回</string>
    <string name="resetPassword">重置密码</string>
    <string name="operation_error">操作失败,请稍后再试</string>
    <string name="alipay_system_exception">支付系统异常</string>
    <string name="alipay_account_exception">此帐号绑定的支付宝账户被冻结或不允许支付</string>
    <string name="alipay_has_unbound">该用户已解除绑定</string>
    <string name="alipay_order_error">订单支付失败</string>
    <string name="alipay_order_cancel">您取消了支付</string>
    <string name="pay_error">支付失败</string>
    <string name="pay_network">网络连接异常</string>
    <string name="pay_result_confirmed">支付结果确认中</string>
    <string name="alipay_order_canceled">支付已取消</string>
    <string name="payment_succeed">恭喜您，支付成功！</string>
    <string name="alipay_succeed">支付成功</string>
    <string name="wxappinstalled">请先安装微信再进行支付</string>
    <string name="alipayappinstalled">请先安装支付宝再进行支付</string>
    <string name="rechargeSuccess">充值成功</string>
    <string name="rechargeFailure">充值失败</string>
    <string name="readAndWrite">这款应用需要获取读写权限，才能使用</string>
    <string name="sdPermission">您拒绝了「SD卡读写权限」所需要的相关权限!请到「设置」开启权限</string>
    <string name="skip">跳过 ></string>
    <string name="experienceImmediately">立即体验</string>
    <string name="notOpenPositionSwitchClose">本应用需要结合定位功能使用，请点击按钮关闭应用，去打开定位开关后，重启应用即可正常使用</string>
    <string name="homePage">首页</string>
    <string name="message">消息</string>
    <string name="community">社区</string>
    <string name="mall">商城</string>
    <string name="trip">出行</string>
    <string name="mine">我的</string>
    <string name="noDevelopment">功能开发中，敬请期待……</string>
    <string name="clickAgainExitProgram">再按一次退出程序</string>
    <string name="sillyChild">傻孩子</string>
    <string name="visa">签证</string>
    <string name="strategy">攻略</string>
    <string name="route2">线路</string>
    <string name="activity">活动</string>
    <string name="hotVideo">热门视频</string>
    <string name="moreVideo">更多视频</string>
    <string name="airportPickup">接机</string>
    <string name="boutiqueLine">精品线路</string>
    <string name="privateOrdering">私人定制</string>
    <string name="byTheDay">按天包车</string>
    <string name="airportDropOff">送机</string>
    <string name="noActivity">暂时没有活动哟~</string>
    <string name="hotRegion">热门地区</string>
    <string name="moreCities">更多城市</string>
    <string name="moreLines">更多线路</string>
    <string name="circuitProfileSummary">线路简介/摘要</string>
    <string name="travelCity">出行城市</string>
    <string name="localTalent">当地达人</string>
    <string name="popularStrategy">热门攻略</string>
    <string name="recentNews">最新动态</string>
    <string name="memberShowAll">查看全部</string>
    <string name="zan">赞</string>
    <string name="inputDestination">输入目的地</string>
    <string name="locateFailure">定位失败</string>
    <string name="travelCity1">,请选择出行城市</string>
    <string name="travelCity2">请选择出行城市</string>
    <string name="callSwitch">「拨打电话」需要以下权限:通话的相关权限</string>
    <string name="callPermission">您拒绝了「拨打电话」所需要的相关权限!</string>
    <string name="locationRelatedPermission">您拒绝了「定位」所需要的相关权限!</string>
    <string name="notOpenPositionSwitch">未打开位置开关，可能导致定位失败或定位不准，请打开GPS</string>
    <string name="openPositionSwitch">定位需要以下权限:\n\n1.访问设备上的gps\n\n2.读写权限</string>
    <string name="moreClassification">更多分类</string>
    <string name="noHotVideo">亲，还没有任何视频哟~</string>
    <string name="people">人</string>
    <string name="peopleWatch">人观看</string>
    <string name="video">视频</string>
    <string name="hotRecommended">热门推荐</string>
    <string name="selectCity">选择城市</string>
    <string name="selectTravelDate">选择行程日期</string>
    <string name="selectTravelDate1">请选择行程日期</string>
    <string name="contactWay3">联系方式</string>
    <string name="sillyChildNum">傻孩子号</string>
    <string name="travelTime3">行程时间</string>
    <string name="travelTime2">行程时间：</string>
    <string name="journeyBegins">行程出发开始地</string>
    <string name="journeyBegins1">请填写行程出发开始地</string>
    <string name="fillPlaceDeparture">填写出发地点</string>
    <string name="journeyEnds">行程结束送达地</string>
    <string name="journeyEnds1">请填写行程结束送达地</string>
    <string name="fillPlaceService">填写送达地点</string>
    <string name="contact">联系人</string>
    <string name="ContactName1">请填写联系人姓名</string>
    <string name="ContactName">联系人姓名</string>
    <string name="ContactNumber">联系人电话</string>
    <string name="ContactNumber1">请填写联系人电话</string>
    <string name="adult3">请选择成人数</string>
    <string name="adult4">成人和儿童总人数超过乘客人数</string>
    <string name="luggage2">行李数超过汽车所能携带行李数</string>
    <string name="dueDemand">预定需求</string>
    <string name="adult1">成人：</string>
    <string name="children1">儿童：</string>
    <string name="luggage1">行李：</string>
    <string name="selectedLines">已选线路</string>
    <string name="serviceVehicle">服务车辆</string>
    <string name="selectDate">选择日期</string>
    <string name="chooseTimeNeedServe">选择您需要服务的时间</string>
    <string name="startTime">开始时间：</string>
    <string name="endTime">结束时间：</string>
    <string name="today">今天</string>
    <string name="day">日</string>
    <string name="one">一</string>
    <string name="two">二</string>
    <string name="three">三</string>
    <string name="four">四</string>
    <string name="five">五</string>
    <string name="six">六</string>
    <string name="searchThousandsOverseasGoods">在万千海外商品中搜索</string>
    <string name="recentSearch">最近搜索</string>
    <string name="searchFound">搜索发现</string>
    <string name="commonlyClassification">常用分类</string>
    <string name="enterSearching">请输入您要搜索的商品</string>
    <string name="clearSearch">确定清空搜索</string>
    <string name="enterSearchContent">请输入您要搜索的内容</string>
    <string name="currentState">当前国家</string>
    <string name="currentLocation">GPS当前定位：</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="user_already_exists">用户已经存在</string>
    <string name="no_register_authority">无开放注册权限</string>
    <string name="illegal_user_name">用户名不合法</string>
    <string name="register_user_fail">注册失败!</string>
    <string name="contact_customer_failure_seconed">联系客服</string>
    <string name="is_contact_customer_failure_seconed">联系客服失败:</string>
    <string name="system_is_regist">系统正在自动为您注册用户…</string>
    <string name="is_contact_customer">正在联系客服，请稍等…</string>
    <string name="visitors">访客</string>
    <string name="sillyChildCustomerService">傻孩子客服</string>
    <string name="toQuote">待后台输入报价</string>
    <string name="clickSeeDetails">点击查看详细信息</string>
    <string name="privatePseudoAgreement">private_order/</string>
    <string name="yourName">您的姓名</string>
    <string name="addNotes">添加备注</string>
    <string name="shop">店铺</string>
    <string name="charter">包车</string>
    <string name="cancel">取消</string>
    <string name="good">商品</string>
    <string name="house">房源</string>
    <string name="user">用户</string>
    <string name="companyGuide">司导</string>
    <string name="merchants">商家</string>
    <string name="dynamicState">动态</string>
    <string name="clearSessionMessage">清空该会话消息</string>
    <string name="deleteSession">删除该会话</string>
    <string name="messageFree">消息免打扰</string>
</resources>