<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchMatch"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        style="@style/Match44"
        android:background="@color/whiteColors"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen34"
            android:layout_marginLeft="@dimen/dimen12"
            android:layout_weight="1"
            android:background="@drawable/shape_communitysearch"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dimen16"
                android:layout_height="@dimen/dimen14"
                android:layout_marginLeft="@dimen/dimen14"
                android:src="@mipmap/community_search" />

            <TextView
                android:id="@+id/tv_search"
                style="@style/AutoMatch"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/cityDoWantGoTo"
                android:maxLength="20"
                android:paddingLeft="@dimen/dimen7"
                android:paddingRight="@dimen/dimen12"
                android:singleLine="true"
                android:textColor="@color/hintColors"
                android:textSize="@dimen/textsize12" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_cancel"
            style="@style/WrapMatch"
            android:gravity="center"
            android:paddingLeft="@dimen/dimen12"
            android:paddingRight="@dimen/dimen12"
            android:text="@string/cancel"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textsize14" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen74"
        android:layout_marginTop="@dimen/dimen5"
        android:background="@color/whiteColors"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_airportPickup"
            android:layout_width="@dimen/dimen49"
            android:layout_height="@dimen/dimen49"
            android:layout_marginRight="@dimen/dimen31"
            android:background="@drawable/shape_airportpickup"
            android:gravity="center"
            android:text="@string/airportPickup"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textsize12" />

        <TextView
            android:id="@+id/tv_airportDropOff"
            android:layout_width="@dimen/dimen49"
            android:layout_height="@dimen/dimen49"
            android:layout_marginRight="@dimen/dimen31"
            android:background="@drawable/shape_airportdropoff"
            android:gravity="center"
            android:text="@string/airportDropOff"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textsize12" />

        <TextView
            android:id="@+id/tv_route"
            android:layout_width="@dimen/dimen49"
            android:layout_height="@dimen/dimen49"
            android:layout_marginRight="@dimen/dimen31"
            android:background="@drawable/shape_route"
            android:gravity="center"
            android:text="@string/route2"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textsize12" />

        <TextView
            android:id="@+id/tv_charter"
            android:layout_width="@dimen/dimen49"
            android:layout_height="@dimen/dimen49"
            android:background="@drawable/shape_chartersearch"
            android:gravity="center"
            android:text="@string/charter"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textsize12" />

    </LinearLayout>


</LinearLayout>