<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Match40"
    android:layout_marginTop="@dimen/dimen6"
    android:background="@android:color/white">

    <LinearLayout
        android:id="@+id/ll_good"
        style="@style/AutoMatch"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_good"
            style="@style/MatchAuto"
            android:gravity="center"
            android:text="@string/good"
            android:textColor="@color/greenColors"
            android:textSize="@dimen/textsize15" />

        <TextView
            android:id="@+id/tv_good1"
            android:layout_width="@dimen/dimen30"
            android:layout_height="@dimen/dimen1"
            android:background="@color/greenColors" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_shop"
        style="@style/AutoMatch"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_shop"
            style="@style/MatchAuto"
            android:gravity="center"
            android:text="@string/shop"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textsize15" />

        <TextView
            android:id="@+id/tv_shop1"
            android:layout_width="@dimen/dimen30"
            android:layout_height="@dimen/dimen1"
            android:background="@color/whiteColors" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_route"
        style="@style/AutoMatch"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_route"
            style="@style/MatchAuto"
            android:gravity="center"
            android:text="@string/route2"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textsize15" />

        <TextView
            android:id="@+id/tv_route1"
            android:layout_width="@dimen/dimen30"
            android:layout_height="@dimen/dimen1"
            android:background="@color/whiteColors" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_strategy"
        style="@style/AutoMatch"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_strategy"
            style="@style/MatchAuto"
            android:gravity="center"
            android:text="@string/strategy"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textsize15" />

        <TextView
            android:id="@+id/tv_strategy1"
            android:layout_width="@dimen/dimen30"
            android:layout_height="@dimen/dimen1"
            android:background="@color/whiteColors" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_dynamicState"
        style="@style/AutoMatch"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_dynamicState"
            style="@style/MatchAuto"
            android:gravity="center"
            android:text="@string/dynamicState"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textsize15" />

        <TextView
            android:id="@+id/tv_dynamicState1"
            android:layout_width="@dimen/dimen30"
            android:layout_height="@dimen/dimen1"
            android:background="@color/whiteColors" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_house"
        style="@style/AutoMatch"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_house"
            style="@style/MatchAuto"
            android:gravity="center"
            android:text="@string/house"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textsize15" />

        <TextView
            android:id="@+id/tv_house1"
            android:layout_width="@dimen/dimen30"
            android:layout_height="@dimen/dimen1"
            android:background="@color/whiteColors" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_companyGuide"
        style="@style/AutoMatch"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_companyGuide"
            style="@style/MatchAuto"
            android:gravity="center"
            android:text="@string/companyGuide"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textsize15" />

        <TextView
            android:id="@+id/tv_companyGuide1"
            android:layout_width="@dimen/dimen30"
            android:layout_height="@dimen/dimen1"
            android:background="@color/whiteColors" />
    </LinearLayout>

</LinearLayout>
